fix: never overflow card box (fixes #585)

--- a/web/css/review-form.css
+++ b/web/css/review-form.css
@@ -30,6 +30,7 @@
   flex-direction: column;
   font-size: 1rem;
   padding: 1em;
+  overflow: hidden;
 }
 
 .card-sentence-box small {
